# calm-

./: .env.example  .gitignore  Dockerfile  README.md  REFACTOR_BLUEPRINT.md  calm_demo.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
.chroma/: chroma.sqlite3
.chroma_test_notebook/: chroma.sqlite3
configs/: example.yaml
examples/: 01_planning.py  02_prediction_rsen.py  03_wildfire_qa.py  04_full_pipeline.py
src/calm/: __init__.py  llm_factory.py  orchestrator.py
src/calm/agents/: __init__.py  base_agent.py  data_knowledge_agent.py  evaluator_agent.py  execution_agent.py  feedback_refiner_agent.py  memory_agent.py  planning_agent.py  prediction_reasoning_agent.py  qa_agent.py  query_normalizer_agent.py  router_agent.py  rsen_module.py
src/calm/artifact/: __init__.py  feature_builder.py  model_runner.py  online_feature_builder.py  prediction_store.py  seasfire_runner.py
src/calm/cli/: __init__.py
src/calm/memory/: __init__.py  chroma_store.py  reranker.py
src/calm/models/: __init__.py  convlstm_model.py  firecastnet_model.py  lstm_model.py  utae_model.py
src/calm/prompt_library/: __init__.py  data_prompts.py  planning_prompts.py  qa_prompts.py  rsen_prompts.py
src/calm/schemas/: __init__.py  contracts.py  prediction_bundle.py  query_context.py
src/calm/tools/: __init__.py  arxiv_tool.py  copernicus.py  earth_engine.py  geocoding.py  safety_check.py  (+2 more)
tests/: conftest.py  test_data_knowledge_agent.py  test_env_loader.py  test_orchestrator.py  test_planning_agent.py  test_qa_agent.py  test_rsen_module.py  test_safety_check.py
(+4 files in other folders)
